# android_transcribe_app

./: .gitignore  Cargo.toml  README.md  build.sh  default.nix  result  settings.gradle.kts
.github/workflows/: android_release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/notune/transcribe/: BackspaceEditor.java  ImeProgressStatusParser.java  RustInputMethodService.java  SpacebarCursorStepper.java
app/src/main/java/dev/surma/parakeeb/: AudioFocusPauser.java  BackspaceEditor.java  FieldEditorActivity.java  HistoryAdapter.java  ImeProgressStatusParser.java  ImeVolumeKeyHandler.java  LiveSubtitleActivity.java  LiveSubtitleService.java  LlmPromptRenderer.java  LlmSettings.java  LlmSettingsStore.java  MainActivity.java  (+11 more)
app/src/main/res/drawable/: bg_backspace.xml  bg_card.xml  bg_history_item.xml  bg_key_normal.xml  bg_modifier_active.xml  bg_modifier_inactive.xml  bg_record_progress.xml  bg_tab_selected.xml  ic_collapse_panel.xml  ic_expand_panel.xml  ic_history.xml  ic_keyboard_tab.xml  ic_settings_tab.xml
app/src/main/res/layout/: activity_field_editor.xml  activity_main.xml  history_list_item.xml  ime_layout.xml  recognize_activity.xml  setting_text.xml  setting_toggle.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: method.xml  qwerty.xml  symbols.xml
nix/: android-transcribe-app.nix  gradle-deps.json
src/: ime.rs  main_activity.rs  recognize.rs  subtitle.rs  transcribe_file.rs  voice_session.rs
transcribe-rs/src/engines/parakeet/: model.rs
(+11 files in other folders)
