[package]
name = "android_transcribe_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cpal = "0.15"
log = "0.4"
android_logger = "0.13"
anyhow = "1.0"
transcribe-rs = { path = "transcribe-rs" }
jni = "0.21"
once_cell = "1.19"
parking_lot = "0.12"
crossbeam-channel = "0.5"

ort = { version = "2.0.0-rc.10", features = ["load-dynamic", "xnnpack", "nnapi"] }
